assets/styles/main.scss
body {
  background-color: $background;
  color: $text;
  font-family: $font-primary;
  font-weight: 300;
  font-size: 18px;
  line-height: 22px;
}

html {
  scroll-behavior: smooth;
}

html,
body,
#__nuxt,
.app {
  height: 100%;
}

.wrapper {
  @include horizontal-padding;
  max-width: 1440px;
  width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
  overflow-x: clip;
}

